...

                      GoogleButton(onPressed: signInWithGoogle),
                      SizedBox(height: screenHeight * 0.02),

                      BuildButton(
                        icon: Icons.phone,
                        text: "Continue with Phone",
                        onPressed: continueWithPhone,
                      ),
                      SizedBox(height: screenHeight * 0.06),

                      MainButton(
                        text: 'Sign In',
                        backgroundColor: const Color.fromRGBO(123, 61, 244, 1),
                        onPressed: signInUser,
                      ),
                      SizedBox(height: screenHeight * 0.03),

                      const Center(child: PrivacyTermsText()),
...
