...
                                      const SizedBox(height: 20),
                                      // Slide text
                                      if (_showSlideText)
                                        SlideTransition(
                                          position: _textSlideAnimation,
                                          child: Text(
                                            'SwiftRide',
                                            style: TextStyle(
                                              fontSize:
                                                  MediaQuery.of(
                                                    context,
                                                  ).size.width *
                                                  0.14,
...
                                        AnimatedOpacity(
                                          opacity: 1.0,
                                          duration: const Duration(
                                            milliseconds: 800,
                                          ),
                                          child: Text(
                                            "Ride Smart, Ride Swift",
                                            style: TextStyle(
                                              fontSize:
                                                  MediaQuery.of(
                                                    context,
                                                  ).size.width *
                                                  0.05,
...
